--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "install": "^0.13.0",
     "motion": "^11.14.1",
     "npm": "^10.9.2",
+    "primereact": "^10.9.1",
+    "quill": "^2.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
