--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.7.9",
     "date-fns": "^4.1.0",
     "express": "^4.21.2",
+    "firebase": "^11.2.0",
     "iconoir-react": "^7.8.0",
     "install": "^0.13.0",
     "motion": "^11.14.1",
